# Crossi-Multi

./: .gitignore  Cargo.toml  JohnMessage.txt  build.bat
client/: Cargo.toml  build.bat
client/src/: client.rs  lib.rs
core/: Cargo.toml
core/src/: bitmap.rs  client.rs  crossy_ruleset.rs  game.rs  interop.rs  lib.rs  map.rs  math.rs  player.rs  player_id_map.rs  ring_buffer.rs  rng.rs  telemetry.rs  timeline.rs
core/src/map/: bushes.rs  icy.rs  lava.rs  mod.rs  obstacle_row.rs  river.rs  road.rs
dev-client/: Cargo.toml
dev-client/src/: main.rs
gm-client/: Cargo.toml  build.bat
gm-client/src/: lib.rs
map_benchmark/: Cargo.toml
map_benchmark/src/: main.rs
server/: Cargo.toml
server/src/: main.rs
sprs/: bird_dialogue_cute.aseprite  bush_background.aseprite  bush_foreground.aseprite  bushmockup.aseprite  countdown.aseprite  font_blob.aseprite  font_blob_2.aseprite  font_small.aseprite  font_small_2.aseprite  fonttest.aseprite  mouse_dialogue_cute.aseprite  spr_bird_dialogue_cute_2.ase  spr_duck_dialogue.aseprite  spr_move_tiles.aseprite  spr_no_winner.aseprite  spr_winner.aseprite
src/: game.rs  lib.rs
storepage/: capsule_base.aseprite  capsule_base_double.aseprite  chars.aseprite  demo_text.aseprite  roadtoads_base.aseprite  roadtoads_base_mouse.aseprite  roadtoads_base_multichar.aseprite  roadtoads_base_multichar_top.aseprite  roadtoads_base_multichar_vert.aseprite
web-client/: Cargo.toml  package-lock.json  package.json  publish.sh  webpack.config.js
web-client/js/: client.js  index.js
web-client/src/: ai.rs  client_seen_pushes.rs  draw_commands.rs  lib.rs  (+4 more)
web-server/: Cargo.toml  build_run_server.sh  cleanup_logs.sh  run_server.sh  wordlist.txt
web-server/src/: crossy_server.rs  gameid_generator.rs  main.rs
windows/: .gitignore  Cargo.toml  prepare_build.bat  steam_appid.txt
(+58 files in other folders)
