[package]
name = "crossy_multi_core"
version = "0.1.0"
authors = ["Dan"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2"
num-derive = "0.3"
serde = { version = "1.0", features = ["derive"] }
froggy-rand = "0.2.1"
backtrace = "0.3"
smallvec = "1.13.2"
