[package]
name = "web-server"
version = "0.1.0"
authors = ["Dan Slocombe <dan.slocombe@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossy_multi_core = { path = "../core" }
warp = { version = "0.3", features = ["tls", "compression"] }
tokio = { version = "1.20", features = ["rt-multi-thread", "macros", "io-util", "sync"] }
tokio-stream = "0.1"
pretty_env_logger = "0.4"
futures = "0.3"
serde = "1.0"
serde_derive = "1.0"
rand = "0.8"
flexbuffers = "2.0"
chrono = "0.4"
froggy-rand = "0.2"
lazy_static = "1.4"